:focus-visible with click on radio/checkbox labels is broken https://bugs.webkit.org/show_bug.cgi?id=236331

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Added new WPT test to cover this case.

* web-platform-tests/css/selectors/focus-visible-026-expected.txt: Added.
* web-platform-tests/css/selectors/focus-visible-026.html: Added.

Source/WebCore:

When the label is clicked we have to send the FocusTrigger information to Element::focus().
There we avoid setting FocusVisibility:Visible if it has been triggered via mouse click.

Test: imported/w3c/web-platform-tests/css/selectors/focus-visible-026.html

* dom/Element.cpp:
(WebCore::Element::focus): Add a check for FocusTrigger::Click to avoid setting FocusVisibility:Visible.
* html/HTMLLabelElement.cpp:
(WebCore::HTMLLabelElement::defaultEventHandler): Pass FocusTrigger::Click.



Canonical link: https://commits.webkit.org/247052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289521 268f45cc-cd09-0410-ab3c-d52691b4dbfc