Source/WebCore/dom/Element.cpp
@@ -3109,7 +3109,7 @@ void Element::focus(const FocusOptions& options)
         FocusOptions optionsWithVisibility = options;
         if (options.trigger == FocusTrigger::Bindings && document->wasLastFocusByClick())
             optionsWithVisibility.visibility = FocusVisibility::Invisible;
-        else
+        else if (options.trigger != FocusTrigger::Click)
             optionsWithVisibility.visibility = FocusVisibility::Visible;
 
         // Focus and change event handlers can cause us to lose our last ref.
